--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Curso_de_Java/ex1Curso/nbproject/private/
 /Curso_de_Java/ex2Curso/nbproject/private/
 /Curso_de_Java/ex3Curso/nbproject/private/
+/Curso_de_Java/ex1Curso/build/
+/Curso_de_Java/ex2Curso/build/
+/Curso_de_Java/ex3Curso/build/
