Exercicios Membros Estaticos

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Curso_de_Java/ex1Curso/build/
 /Curso_de_Java/ex2Curso/build/
 /Curso_de_Java/ex3Curso/build/
+/Curso_de_Java/ex4Curso/nbproject/private/
+/Curso_de_Java/ex4Curso/build/
