--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Curso_de_Java/ex3Curso/build/
 /Curso_de_Java/ex4Curso/nbproject/private/
 /Curso_de_Java/ex4Curso/build/
+/Curso_de_Java/ex5Curso/nbproject/private/
+/Curso_de_Java/ex5Curso/build/
