Metade do Cap 10 e 1 Ex

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /Curso_de_Java/ex4Curso/build/
 /Curso_de_Java/ex5Curso/nbproject/private/
 /Curso_de_Java/ex5Curso/build/
+/Curso_de_Java/cursoExemplo1/nbproject/private/
+/Curso_de_Java/cursoExemplo1/build/
+/Curso_de_Java/ex6Curso/nbproject/private/
+/Curso_de_Java/ex6Curso/build/
