--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@
 /Curso_de_Java/cursoExemplo1/build/
 /Curso_de_Java/ex6Curso/nbproject/private/
 /Curso_de_Java/ex6Curso/build/
+/Curso_de_Java/cursoExemplo2/nbproject/private/
+/Curso_de_Java/cursoExemplo2/build/
+/Curso_de_Java/ex7Curso/nbproject/private/
+/Curso_de_Java/ex7Curso/build/
+/Curso_de_Java/cursoExemplo3/nbproject/private/
+/Curso_de_Java/cursoExemplo3/build/
+/Curso_de_Java/ex8Curso/nbproject/private/
+/Curso_de_Java/ex8Curso/build/
