--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /Curso_de_Java/cursoExemplo3/build/
 /Curso_de_Java/ex8Curso/nbproject/private/
 /Curso_de_Java/ex8Curso/build/
+/Curso_de_Java/cursoExemplo4/nbproject/private/
+/Curso_de_Java/cursoExemplo4/build/
