--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@
 /Curso_de_Java/ex8Curso/build/
 /Curso_de_Java/cursoExemplo4/nbproject/private/
 /Curso_de_Java/cursoExemplo4/build/
+/Curso_de_Java/cursoExemplo5/nbproject/private/
+/Curso_de_Java/cursoExemplo5/build/
+/Curso_de_Java/ex9Curso/nbproject/private/
+/Curso_de_Java/ex9Curso/build/
+/Curso_de_Java/ex10Curso/nbproject/private/
+/Curso_de_Java/ex10Curso/build/
+/Curso_de_Java/ex11Curso/nbproject/private/
