--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /Curso_de_Java/ex10Curso/nbproject/private/
 /Curso_de_Java/ex10Curso/build/
 /Curso_de_Java/ex11Curso/nbproject/private/
+/Curso_de_Java/ex11Curso/build/
