--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@
 /Curso_de_Java/ex10Curso/build/
 /Curso_de_Java/ex11Curso/nbproject/private/
 /Curso_de_Java/ex11Curso/build/
+/Curso_de_Java/cursoExemplo6/nbproject/private/
+/Curso_de_Java/cursoExemplo6/build/
+/Curso_de_Java/cursoExemplo7/nbproject/private/
+/Curso_de_Java/cursoExemplo7/build/
+/Curso_de_Java/ex12Curso/nbproject/private/
+/Curso_de_Java/ex12Curso/build/
