--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@
 /Curso_de_Java/cursoExemplo7/build/
 /Curso_de_Java/ex12Curso/nbproject/private/
 /Curso_de_Java/ex12Curso/build/
+/Curso_de_Java/cursoExemplo8/nbproject/private/
+/Curso_de_Java/cursoExemplo8/build/
+/Curso_de_Java/ex13Curso/nbproject/private/
+/Curso_de_Java/ex13Curso/build/
