Tratamento de Erros Exemplo

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@
 /Curso_de_Java/cursoExemplo8/build/
 /Curso_de_Java/ex13Curso/nbproject/private/
 /Curso_de_Java/ex13Curso/build/
+/Curso_de_Java/JavaApplication26/nbproject/private/
+/Curso_de_Java/JavaApplication26/build/
+/Curso_de_Java/cursoExemplo9/nbproject/private/
+/Curso_de_Java/cursoExemplo9/build/
