--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ nbdist/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/Curso_de_Java/mavenproject1/target/
