--- a/Curso_de_Java/JDBC_Exemplo2/nbproject/project.properties
+++ b/Curso_de_Java/JDBC_Exemplo2/nbproject/project.properties
@@ -28,15 +28,15 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/cursoExemplo1.jar
+dist.jar=${dist.dir}/JDBC_Exemplo2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/cursoExemplo1
+dist.jlink.output=${dist.jlink.dir}/JDBC_Exemplo2
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.teste.classpath}
+    ${libs.MySQLConnector.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=cursoExemplo1
+jlink.launcher.name=JDBC_Exemplo2
 main.class=application.Program
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
