--- a/Curso_de_Java/JDBC_exDAO/nbproject/project.properties
+++ b/Curso_de_Java/JDBC_exDAO/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JDBC_exDAO
+application.vendor=Yuji
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,30 +29,31 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/cursoExemplo1.jar
+dist.jar=${dist.dir}/JDBC_exDAO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/cursoExemplo1
+dist.jlink.output=${dist.jlink.dir}/JDBC_exDAO
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.teste.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${libs.MySQLConnector.classpath}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=17
 javac.target=17
 javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
+    ${javac.classpath}
 javac.test.modulepath=\
-    ${javac.modulepath}
+    ${javac.modulepath}:\
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -71,7 +73,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=cursoExemplo1
+jlink.launcher.name=JDBC_exDAO
 main.class=application.Program
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -87,8 +89,7 @@ run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${javac.test.classpath}
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
