--- a/Curso_de_Java_Spring/project2_WebServices/pom.xml
+++ b/Curso_de_Java_Spring/project2_WebServices/pom.xml
@@ -37,11 +37,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 	</dependencies>
 
@@ -53,5 +59,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
