--- a/Curso_de_Java_Spring/project2_WebServices/src/main/resources/application.properties
+++ b/Curso_de_Java_Spring/project2_WebServices/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.profiles.active=test
 
 spring.jpa.open-in-view=true
+
+springdoc.packagesToScan=com.cursojava.project2_WebServices.resources
